# xfwm4-themes-HiDPI

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.ac  readme.md  xfwm4-themes.spec.in
themes/: Makefile.am  Makefile.in
themes/adept/: Makefile.am  Makefile.in  bottom-active.xpm  bottom-inactive.xpm  bottom-left-active.xpm  bottom-left-inactive.xpm  bottom-right-active.xpm  bottom-right-inactive.xpm  close-active.xpm  close-inactive.xpm  close-pressed.xpm  hide-active.xpm  hide-inactive.xpm  hide-pressed.xpm  left-active.xpm  left-inactive.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-pressed.xpm  right-active.xpm  right-inactive.xpm  title-1-active.xpm  title-1-inactive.xpm  title-2-active.xpm  title-2-inactive.xpm  title-3-active.xpm  title-3-inactive.xpm  title-4-active.xpm  title-4-inactive.xpm  title-5-active.xpm  title-5-inactive.xpm  top-left-active.xpm  top-left-inactive.xpm  top-right-active.xpm  top-right-inactive.xpm
themes/agua/: Makefile.am  Makefile.in  bottom-active.xpm  bottom-inactive.xpm  bottom-left-active.xpm  bottom-left-inactive.xpm  bottom-right-active.xpm  bottom-right-inactive.xpm  close-active.xpm  close-inactive.xpm  close-pressed.xpm  hide-active.xpm  hide-inactive.xpm  hide-pressed.xpm  left-active.xpm  left-inactive.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-pressed.xpm  menu-active.xpm  menu-inactive.xpm  menu-pressed.xpm  right-active.xpm  right-inactive.xpm  shade-active.xpm  shade-inactive.xpm  shade-pressed.xpm  stick-active.xpm  stick-inactive.xpm  stick-pressed.xpm  title-1-active.xpm  title-1-inactive.xpm  title-2-active.xpm  title-2-inactive.xpm  title-3-active.xpm  title-3-inactive.xpm  title-4-active.xpm  title-4-inactive.xpm  title-5-active.xpm  title-5-inactive.xpm  (+4 more)
themes/agualemon/: Makefile.am  Makefile.in  bottom-active.xpm  bottom-left-active.xpm  bottom-left-inactive.xpm  bottom-right-active.xpm  bottom-right-inactive.xpm  hide-inactive.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-pressed.xpm  menu-pressed.xpm  right-active.xpm  shade-inactive.xpm  shade-pressed.xpm  stick-inactive.xpm  stick-pressed.xpm  title-1-inactive.xpm  title-2-active.xpm  title-2-inactive.xpm  title-3-active.xpm  title-4-active.xpm  top-left-inactive.xpm  top-right-active.xpm  top-right-inactive.xpm
themes/alternate/: Makefile.am  Makefile.in  bottom-inactive.xpm  bottom-left-active.xpm  bottom-right-active.xpm  close-pressed.xpm  hide-active.xpm  hide-inactive.xpm  hide-pressed.xpm  left-inactive.xpm  maximize-inactive.xpm  maximize-toggled-active.xpm  right-active.xpm  right-inactive.xpm  shade-inactive.xpm  shade-pressed.xpm  stick-active.xpm  stick-toggled-active.xpm  stick-toggled-inactive.xpm  title-3-active.xpm  title-3-inactive.xpm  title-4-active.xpm  title-4-inactive.xpm  title-5-active.xpm  top-right-active.xpm
themes/atlanta/: Makefile.am  Makefile.in  bottom-active.xpm  bottom-inactive.xpm  bottom-left-active.xpm  bottom-left-inactive.xpm  bottom-right-active.xpm  close-active.xpm  close-inactive.xpm  close-pressed.xpm  hide-active.xpm  hide-inactive.xpm  hide-pressed.xpm  left-active.xpm  left-inactive.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-pressed.xpm  menu-inactive.xpm  menu-pressed.xpm  right-active.xpm  right-inactive.xpm  shade-active.xpm  shade-inactive.xpm  shade-pressed.xpm  stick-active.xpm  stick-inactive.xpm  stick-pressed.xpm  themerc  title-1-active.xpm  title-1-inactive.xpm  title-2-active.xpm  title-2-inactive.xpm  title-3-active.xpm  title-3-inactive.xpm  title-4-active.xpm  title-4-inactive.xpm  title-5-active.xpm  title-5-inactive.xpm  top-left-active.xpm  (+3 more)
themes/atlanta2/: Makefile.am  Makefile.in  bottom-active.xpm  bottom-inactive.xpm  bottom-left-active.xpm  bottom-left-inactive.xpm  bottom-right-active.xpm  bottom-right-inactive.xpm  close-active.xpm  close-inactive.xpm  close-pressed.xpm  hide-active.xpm  hide-inactive.xpm  hide-pressed.xpm  left-active.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-pressed.xpm  right-active.xpm  right-inactive.xpm  shade-active.xpm  shade-inactive.xpm  shade-pressed.xpm  stick-active.xpm  stick-inactive.xpm  stick-pressed.xpm  title-1-active.xpm  title-1-inactive.xpm  title-2-active.xpm  title-2-inactive.xpm  title-3-active.xpm  title-3-inactive.xpm  title-4-active.xpm  title-4-inactive.xpm  title-5-active.xpm  title-5-inactive.xpm  top-left-active.xpm  top-left-inactive.xpm  top-right-active.xpm  top-right-inactive.xpm
themes/b5/: Makefile.am  Makefile.in  bottom-active.xpm  bottom-left-active.xpm  bottom-left-inactive.xpm  close-active.xpm  close-pressed.xpm  themerc  title-1-active.xpm  title-1-inactive.xpm  title-2-inactive.xpm  title-3-active.xpm  title-3-inactive.xpm  title-4-active.xpm  title-5-active.xpm  top-left-active.xpm  top-left-inactive.xpm  top-right-active.xpm  top-right-inactive.xpm
themes/b6/: Makefile.am  Makefile.in  bottom-left-active.xpm  bottom-right-active.xpm  close-active.xpm  close-inactive.xpm  close-pressed.xpm  hide-pressed.xpm  left-inactive.xpm  maximize-inactive.xpm  maximize-pressed.xpm  right-active.xpm  shade-inactive.xpm  themerc  top-left-active.xpm  top-left-inactive.xpm
themes/basix/: Makefile.in  bottom-active.xpm  bottom-inactive.xpm  bottom-left-active.xpm  bottom-left-inactive.xpm  bottom-right-active.xpm  bottom-right-inactive.xpm  close-active.xpm  close-inactive.xpm  close-pressed.xpm  hide-active.xpm  hide-inactive.xpm  hide-pressed.xpm  left-active.xpm  left-inactive.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-pressed.xpm  maximize-toggled-active.xpm  maximize-toggled-inactive.xpm  maximize-toggled-pressed.xpm  menu-active.xpm  menu-inactive.xpm  menu-pressed.xpm  right-active.xpm  right-inactive.xpm  shade-active.xpm  shade-inactive.xpm  shade-pressed.xpm  shade-toggled-active.xpm  shade-toggled-inactive.xpm  shade-toggled-pressed.xpm  stick-active.xpm  stick-inactive.xpm  stick-pressed.xpm  stick-toggled-active.xpm  stick-toggled-inactive.xpm  stick-toggled-pressed.xpm  themerc  (+14 more)
(+26139 files in other folders)
