dnl configure.ac

AC_INIT([configure])

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE([xfwm4-themes], [3.91.0])

AM_MAINTAINER_MODE

dnl Check for basic programs
AC_PROG_INSTALL

AC_OUTPUT([
xfwm4-themes.spec
Makefile
themes/Makefile
themes/adept/Makefile
themes/agua/Makefile
themes/alternate/Makefile
themes/atlanta/Makefile
themes/atlanta2/Makefile
themes/b5/Makefile
themes/b6/Makefile
themes/beastie/Makefile
themes/biz/Makefile
themes/coldsteel/Makefile
themes/coolclean/Makefile
themes/crux/Makefile
themes/cruxish/Makefile
themes/defcon-IV/Makefile
themes/eazel-blue/Makefile
themes/elberg/Makefile
themes/fbx/Makefile
themes/g2/Makefile
themes/galaxy/Makefile
themes/gaudy/Makefile
themes/gnububble/Makefile
themes/gorilla/Makefile
themes/gtk/Makefile
themes/iceg/Makefile
themes/kde/Makefile
themes/keramik/Makefile
themes/kindaker/Makefile
themes/koynacity/Makefile
themes/linea/Makefile
themes/metabox/Makefile
themes/microgui/Makefile
themes/mofit/Makefile
themes/next/Makefile
themes/ops/Makefile
themes/oroborus/Makefile
themes/perl/Makefile
themes/pills/Makefile
themes/piranha/Makefile
themes/platinum/Makefile
themes/quiet-purple/Makefile
themes/quinx/Makefile
themes/r9x/Makefile
themes/redmond/Makefile
themes/redmondxp/Makefile
themes/retro/Makefile
themes/silverado/Makefile
themes/slick/Makefile
themes/slimline/Makefile
themes/tabs/Makefile
themes/today/Makefile
themes/totem/Makefile
themes/trench/Makefile
themes/triviality/Makefile
themes/tux/Makefile
themes/variation/Makefile
themes/xfce/Makefile
])
