dnl configure.ac

AC_INIT([xfwm4-themes], [4.3.99.2], [http://bugzilla.xfce.org])

AM_CONFIG_HEADER([config.h])

AM_INIT_AUTOMAKE([1.8 dist-bzip2 tar-ustar])
AM_MAINTAINER_MODE()

dnl Check for basic programs
AC_PROG_INSTALL()

AC_OUTPUT([
xfwm4-themes.spec
Makefile
themes/Makefile
themes/adept/Makefile
themes/agua/Makefile
themes/agualemon/Makefile
themes/alternate/Makefile
themes/atlanta/Makefile
themes/atlanta2/Makefile
themes/b5/Makefile
themes/b6/Makefile
themes/basix/Makefile
themes/bbs/Makefile
themes/beastie/Makefile
themes/biz/Makefile
themes/blackwall/Makefile
themes/buzz/Makefile
themes/coldsteel/Makefile
themes/coolclean/Makefile
themes/crux/Makefile
themes/cruxish/Makefile
themes/curve/Makefile
themes/defcon-IV/Makefile
themes/eazel-blue/Makefile
themes/elberg/Makefile
themes/exocet/Makefile
themes/fbx/Makefile
themes/g2/Makefile
themes/galaxy/Makefile
themes/gaudy/Makefile
themes/gelly/Makefile
themes/gnububble/Makefile
themes/gorilla/Makefile
themes/gtk/Makefile
themes/iceg/Makefile
themes/kde/Makefile
themes/kde1/Makefile
themes/keramik/Makefile
themes/kindaker/Makefile
themes/kleanux/Makefile
themes/koynacity/Makefile
themes/linea/Makefile
themes/lineart/Makefile
themes/meenee/Makefile
themes/metabox/Makefile
themes/microcurve/Makefile
themes/microdeck/Makefile
themes/microdeck2/Makefile
themes/microdeck3/Makefile
themes/microgui/Makefile
themes/mofit/Makefile
themes/next/Makefile
themes/ops/Makefile
themes/opta/Makefile
themes/oroborus/Makefile
themes/perl/Makefile
themes/pills/Makefile
themes/piranha/Makefile
themes/platinum/Makefile
themes/prune/Makefile
themes/quiet-purple/Makefile
themes/quinx/Makefile
themes/r9x/Makefile
themes/redmond/Makefile
themes/redmondxp/Makefile
themes/retro/Makefile
themes/silverado/Makefile
themes/slick/Makefile
themes/slimline/Makefile
themes/smallscreen/Makefile
themes/smoothwall/Makefile
themes/symphony/Makefile
themes/synthetic/Makefile
themes/tabs/Makefile
themes/tgc/Makefile
themes/tgc-large/Makefile
themes/today/Makefile
themes/totem/Makefile
themes/trench/Makefile
themes/triviality/Makefile
themes/tubular/Makefile
themes/tux/Makefile
themes/variation/Makefile
themes/waza/Makefile
themes/wildbush/Makefile
themes/xfce/Makefile
])
