# themes/Makefile.am
#

SUBDIRS =								\
	adept								\
	agua								\
	agualemon							\
	alternate							\
	atlanta								\
	atlanta2							\
	b5								\
	b6								\
	bbs								\
	beastie								\
	biz								\
	blackwall							\
	buzz								\
	coldsteel							\
	coolclean							\
	crux								\
	cruxish								\
	curve								\
	eazel-blue							\
	defcon-IV							\
	elberg								\
	exocet								\
	fbx								\
	g2								\
	galaxy								\
	gaudy								\
	gelly								\
	gnububble							\
	gorilla								\
	gtk								\
	iceg								\
	kde								\
	kde1								\
	keramik								\
	kindaker							\
	kleanux								\
	koynacity							\
	linea								\
	lineart								\
	meenee 							        \
	metabox								\
	microcurve 							\
	microdeck 							\
	microdeck2 							\
	microdeck3 							\
	microgui							\
	mofit								\
	next								\
	ops								\
	oroborus							\
	perl								\
	pills								\
	piranha								\
	platinum							\
	prune								\
	quiet-purple							\
	quinx								\
	r9x								\
	redmond								\
	redmondxp							\
	retro								\
	savage								\
	silverado							\
	slick								\
	slimline							\
	smallscreen							\
	smoothwall							\
	symphony							\
	synthetic							\
	tabs								\
	tgc								\
	tgc-large							\
	today								\
	totem								\
	trench								\
	triviality							\
	tubular								\
	tux								\
	tyrex								\
	variation							\
	xfce
