# themes/Makefile.am
#

SUBDIRS =								\
	adept								\
	agua								\
	agualemon							\
	alternate							\
	atlanta								\
	atlanta2							\
	b5								\
	b6								\
	basix								\
	bbs								\
	beastie								\
	biz								\
	blackwall							\
	buzz								\
	coldsteel							\
	coolclean							\
	crux								\
	cruxish								\
	curve								\
	default-4.0							\
	default-4.2							\
	default-4.4							\
	default-4.6							\
	default-4.8							\
	defcon-IV							\
	eazel-blue							\
	elberg								\
	exocet								\
	fbx								\
	g2								\
	galaxy								\
	gaudy								\
	gelly								\
	gnububble							\
	gorilla								\
	gtk								\
	iceg								\
	kde								\
	kde1								\
	keramik								\
	kindaker							\
	kleanux								\
	koynacity							\
	linea								\
	lineart								\
	meenee 								\
	metabox								\
	microcurve 							\
	microdeck 							\
	microdeck2 							\
	microdeck3 							\
	microgui							\
	mofit								\
	next								\
	ops								\
	opta								\
	oroborus							\
	perl								\
	pills								\
	piranha								\
	platinum							\
	prune								\
	quiet-purple							\
	quinx								\
	r9x								\
	redmond								\
	redmondxp							\
	retro								\
	sassandra							\
	silverado							\
	slick								\
	slimline							\
	smallscreen							\
	smoothwall							\
	stoneage							\
	symphony							\
	synthetic							\
	tabs								\
	tgc								\
	tgc-large							\
	therapy								\
	today								\
	totem								\
	trench								\
	triviality							\
	tubular								\
	tux								\
	tyrex								\
	variation							\
	wallis								\
	waza								\
	wildbush							\
	xfce
