themedir = $(datadir)/themes/Metabox/xfwm4
theme_DATA = README \
	bottom-active.xpm						\
	bottom-inactive.xpm						\
	bottom-left-active.xpm						\
	bottom-left-inactive.xpm					\
	bottom-right-active.xpm						\
	bottom-right-inactive.xpm					\
	close-active.png						\
	close-active.xpm						\
	close-inactive.png						\
	close-inactive.xpm						\
	close-pressed.png						\
	close-pressed.xpm						\
	hide-active.png							\
	hide-active.xpm							\
	hide-inactive.png						\
	hide-inactive.xpm						\
	hide-pressed.png						\
	hide-pressed.xpm						\
	left-active.xpm							\
	left-inactive.xpm						\
	maximize-active.png						\
	maximize-active.xpm						\
	maximize-inactive.png						\
	maximize-inactive.xpm						\
	maximize-pressed.png						\
	maximize-pressed.xpm						\
	maximize-toggled-active.png					\
	maximize-toggled-active.xpm					\
	maximize-toggled-inactive.png					\
	maximize-toggled-inactive.xpm					\
	maximize-toggled-pressed.png					\
	maximize-toggled-pressed.xpm					\
	menu-active.png							\
	menu-active.xpm							\
	menu-inactive.png						\
	menu-inactive.xpm						\
	menu-pressed.png						\
	menu-pressed.xpm						\
	right-active.xpm						\
	right-inactive.xpm						\
	themerc								\
	title-1-active.png						\
	title-1-active.xpm						\
	title-1-inactive.png						\
	title-1-inactive.xpm						\
	title-2-active.png						\
	title-2-active.xpm						\
	title-2-inactive.png						\
	title-2-inactive.xpm						\
	title-3-active.png						\
	title-3-active.xpm						\
	title-3-inactive.png						\
	title-3-inactive.xpm						\
	title-4-active.png						\
	title-4-active.xpm						\
	title-4-inactive.png						\
	title-4-inactive.xpm						\
	title-5-active.png						\
	title-5-active.xpm						\
	title-5-inactive.png						\
	title-5-inactive.xpm						\
	top-left-active.png						\
	top-left-active.xpm						\
	top-left-inactive.png						\
	top-left-inactive.xpm						\
	top-right-active.png						\
	top-right-active.xpm						\
	top-right-inactive.png						\
	top-right-inactive.xpm
EXTRA_DIST = $(theme_DATA)
